Fix jumpy icons on edit

--- a/styles/styles_main.css
+++ b/styles/styles_main.css
@@ -187,7 +187,7 @@ body {
 }
 
 .drop-item {
-		margin: 18px 0px 0px -17px;
+		margin: 18px -17px 0px -17px;
 		float: right;
     width: 30px;
     height: 30px;
